# demo_monorepo

./: .bazelproject  .gitignore  BUILD  MODULE.bazel  README.md  pytest.ini
pycharm_bazel/: BUILD  pycharm_py_binary_wrapper.bzl  pycharm_py_binary_wrapper.py  pycharm_pytest_wrapper.bzl  pycharm_pytest_wrapper.py
services/example_fast_api/: BUILD  Dockerfile  Makefile  README.md  requirements.txt  requirements_combined.in  requirements_combined.txt  requirements_lock.txt  requirements_test.txt
services/example_fast_api/configs/: BUILD  local.ini
services/example_fast_api/src/: BUILD
services/example_fast_api/src/common/: BUILD  config.py  test_config.py
services/example_fast_api/src/domain/: BUILD
services/example_fast_api/src/domain/patients/: BUILD
services/example_fast_api/src/infra/: BUILD
services/example_fast_api/src/infra/patients/: BUILD  in_memory_patients_repository.py  patients_repository.py  test_in_memory_patients_repository.py
services/example_fast_api/src/service/: BUILD  app.py
services/example_fast_api/src/service/dependency_injection/: BUILD  container.py
shared/: BUILD  Makefile  README.md  requirements_combined.in  requirements_lock.txt
shared/common/: BUILD  README.md  config.py  shared_config_instance.py  test_config.py
shared/domain/: BUILD
shared/domain/customers/: BUILD
shared/domain/customers/definitions/: BUILD  constants.py  fakers.py  models.py  test_models.py
shared/infra/: BUILD
shared/infra/customers/: BUILD  customers_repository.py  in_memory_customers_repository.py  test_in_memory_customers_repo.py
(+13 files in other folders)
